--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,35 +1,44 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700');
 
-$danger: rgb(221, 31, 193);
+
 //
 // VARIABLES
 // ----------------------------------------------------
-// $font-size-base: 1;
+$font-size-base: 1;
 // $font-size-larger: 150%;
-// $font-family-sans: Montserrat, sans-serif;
-// $font-family-serif: "Big Caslon", Georgia, serif;
+$font-family-sans: "Montserrat", sans-serif;
+$font-family-serif: "Roboto Slab","Big Caslon", Georgia, serif;
 
-// $color-text: #343a40;
+$color-text: #343a40;
 
-// $color-bg-body: linear-gradient(to bottom, rgba(219,219,219,1) 9%, rgba(215,215,215,1) 24%, rgba(209,209,209,1) 49%, rgba(226,226,226,1) 66%, rgba(254,254,254,1) 95%, rgba(254,254,254,1) 100%);;
-// $body-bg: #000;
+$color-bg-body: linear-gradient(to bottom, rgba(219,219,219,1) 9%, rgba(215,215,215,1) 24%, rgba(209,209,209,1) 49%, rgba(226,226,226,1) 66%, rgba(254,254,254,1) 95%, rgba(254,254,254,1) 100%);;
 
+$primary:#a40c24;
+$secondary:#DEDEDE;
+// $success:       $green !default;
+// $info:          $cyan !default;
+// $warning:       $yellow !default;
+// $danger:        $red !default;
+// $light:         $gray-100 !default;
+// $dark:          $gray-900 !default;
 
 //
 // GENERAL
 // ----------------------------------------------------
 
-// body {
-//     color: $color-text;
-//     background: $color-bg-body;
-//     background-repeat: no-repeat;
-//     background-attachment: fixed;
+body {
+    color: $color-text;
+    background: $color-bg-body;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 
-//     font: {
-//         size: $font-size-base;
-//         family: $font-family-sans;
-//         weight: normal;
-//     }
-// }
+    font: {
+        size: $font-size-base;
+        family: $font-family-serif;
+        weight: normal;
+    }
+}
 
 
 
@@ -51,9 +60,6 @@ $danger: rgb(221, 31, 193);
 //     font-size: $font-size-larger;
 // }
 
-//
-// NAVBAR
-// ----------------------------------------------------
 
 //
 // BOOTSTRAP
@@ -70,6 +76,14 @@ $danger: rgb(221, 31, 193);
 
 // 4. Include any default map overrides here
 
+//
+// NAVBAR
+// ----------------------------------------------------
+.navbar-nav .nav-link.active {
+    color: pink !important
+}
+
+
 // 5. Include remainder of required parts
 @import "../../node_modules/bootstrap/scss/_maps";
 @import "../../node_modules/bootstrap/scss/_mixins";
@@ -85,6 +99,16 @@ $danger: rgb(221, 31, 193);
 @import "../../node_modules/bootstrap/scss/grid";
 @import "../../node_modules/bootstrap/scss/helpers";
 
+//
+//BOOTSTRAP Components
+// ----------------------------------------------------
+
 @import "../../node_modules/bootstrap/scss/_buttons";
 @import "../../node_modules/bootstrap/scss/_forms";
 @import "../../node_modules/bootstrap/scss/utilities/api";
+@import "../../node_modules/bootstrap/scss/dropdown";
+@import "../../node_modules/bootstrap/scss/navbar";
+@import "../../node_modules/bootstrap/scss/nav";
+@import "../../node_modules/bootstrap/scss/dropdown";
+//Import all of Bootstrap's CSS
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
