--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -29,7 +29,7 @@ $color-bg-body: linear-gradient(to bottom, rgba(219,219,219,1) 9%, rgba(215,215,
 // ----------------------------------------------------
 body {
     color: $color-text;
-    background: $color-bg-body;
+    // background: $color-bg-body;
     background-repeat: no-repeat;
     background-attachment: fixed;
 
@@ -86,4 +86,32 @@ a:hover {
     margin: 0;
     justify-self: flex-end;
     flex-direction: column !important;
+}
+
+//
+// INTRODUCTION
+// ----------------------------------------------------
+.introduction {
+    // background-color: gray;
+
+}
+
+
+.introduction-container {
+    border: 1px solid red;
+}
+
+.introduction-carousel{
+    background-color: #e2e2e2;
+    clip-path: polygon(0 0, 95% 0, 75% 100%, 0% 90%);
+}
+
+.introduction-text {
+    background: linear-gradient(to bottom, #eaeaea 0%, #ffffff 80%);
+    // clip-path: polygon(30% 0, 100% 0, 100% 100%, 45% 100%);
+
+}
+
+.introduction-container .col{
+    border: 0.5px solid rgb(55, 0, 255);
 }
