--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -91,10 +91,10 @@ a:hover {
 //
 // INTRODUCTION
 // ----------------------------------------------------
-.introduction {
-    // background-color: gray;
+// .introduction {
+//     background-color: gray;
 
-}
+// }
 
 
 .introduction-container {
