--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -55,7 +55,8 @@ h1, h2, h3 {
 }
 
 .img-logo{
-    width: 50%;
+    max-width: 50%;
+    max-height: 72px;
 }
 
 a:hover {
@@ -96,13 +97,18 @@ a:hover {
     background-color: $color-bg-primary;
 }
 
+.introduction img{
+    max-height: 500px;
 
-.carousel-polygon {
-    background-color: $color-bg-primary;
-    clip-path: polygon(0 92%, 0 100%, 100% 100%, 100% 0%, 96% 0, 85% 98%);
-    width: 546px;
-    height: 409px;
 }
+
+// .carousel-polygon {
+    
+//     background-color: $color-bg-primary;
+//     clip-path: polygon(0 92%, 0 100%, 100% 100%, 100% 0%, 96% 0, 85% 98%);
+//     width: 546px;
+//     height: 409px;
+// }
 
 
 .carousel-btn{
