--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -27,6 +27,10 @@ $color-bg-gradient: linear-gradient(
     rgba(254, 254, 254, 1) 100%
 );
 
+$box-shadow-primary:0 2px 1px rgba(0, 0, 0, 0.05),
+                    0 2px 3px rgba(0, 0, 0, 0.05),
+                    0 4px 8px rgba(0, 0, 0, 0.05);
+
 //
 //BOOTSTRAP IMPORT
 // ----------------------------------------------------
@@ -152,6 +156,37 @@ a:hover {
     background-color: pink;
 }
 
-.process-icons {
+//
+// PROCESS
+// ----------------------------------------------------
+
+
+.process-step {
     border: solid 1px $primary;
+}
+
+.process .process-step-icon {
+    background-color: $primary;
+    border-radius: 100%;
+    width: 7rem;
+    height: 7rem;
+    margin: 0 auto;
+
+    display: flex;
+      
+        
+    flex-direction: column;
+      
+
+    justify-content: center;
+      
+    align-items: center;
+      
+    font-size: 3rem;
+
+    box-shadow:$box-shadow-primary;
+}
+
+h5 {
+    font-weight: 600;
 }
