--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -235,3 +235,26 @@ h5 {
 // .galerry-tabs {
 //     background-color: $tertiary;
 // }
+
+.show-more-img {
+    opacity: 0.2;
+}
+
+.show-more-container {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .centered h5{
+    opacity: 1;
+    color: $primary;
+    font-weight: 600;
+  }
