refactor: introduce vue.js

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -154,11 +154,11 @@ a:hover {
 //     height: 409px;
 // }
 
-.btn-request-quote:hover {
+.btn-contact-form:hover {
     color: $secondary !important;
 }
 
-// .btn-request-quote:active {
+// .btn-contact-form:active {
 //     background-color: pink;
 // }
 
