feat: display and hide gallery set up

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -278,7 +278,7 @@ h5 {
 .show-more-container, .show-less-container {
     position: relative;
     text-align: center;
-    color: white;
+    // color: white;
 }
 
 .centered {
