--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -278,11 +278,33 @@ h5 {
 
 }
 
-.show-more-container, .show-less-container {
+.show-more-container {
     position: relative;
     text-align: center;
     // color: white;
 }
+
+.show-less-container{
+  background-color: $color-bg-primary;
+  background: linear-gradient(
+    to bottom,
+    rgba(241, 239, 239, 0) 0%,
+    rgba(241, 239, 239, 0.3) 25%,
+    rgba(241, 239, 239, 0.55) 50%,
+    rgba(241, 239, 239, 0.8) 75%,
+    rgba(241, 239, 239, 1) 100%
+  );
+  background: linear-gradient(
+  to bottom,
+  rgba(241, 239, 239, 0) 0%,
+  rgba(241, 239, 239, 0) 15%,
+  rgba(241, 239, 239, 0.4) 40%,
+  rgba(241, 239, 239, 0.7) 70%,
+  rgba(241, 239, 239, 0.9) 85%,
+  rgba(241, 239, 239, 1) 100%
+);
+}
+
 
 .centered {
     position: absolute;
