--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -33,6 +33,8 @@ $box-shadow-primary:0 2px 1px rgba(0, 0, 0, 0.05),
                     0 2px 3px rgba(0, 0, 0, 0.05),
                     0 4px 8px rgba(0, 0, 0, 0.05);
 
+$btn-box-shadow: 3px 4px 14px -3px rgba(0, 0, 0, 0.75);
+
 //
 //BOOTSTRAP IMPORT
 // ----------------------------------------------------
@@ -324,8 +326,13 @@ h5 {
   }
   
 
-  #gallery svg {
-    color: lighten($color: $tertiary, $amount: 15%) !important;
+  .icon-show-less {
+    color: lighten($color: $tertiary, $amount: 15%);
   }
+
+  .btn-show-less, .btn-show-more {
+    box-shadow: $btn-box-shadow;
+  }
+
 
  
