--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -77,6 +77,10 @@ a:hover {
     color: $primary !important;
 }
 
+.p-6 {
+  padding: 4rem !important;
+}
+
 //
 // NAVBAR
 // ----------------------------------------------------
@@ -113,45 +117,20 @@ a:hover {
     max-height: 500px;
 }
 
-//Carousel mask - inspiration from https://alunad.cz/zabradli
-// .mask-skew-first{
-//     mask-image: conic-gradient(from 25deg at 100% 0%,transparent 0%,#000 0%);
-// }
+// show masks only from lg breakpoint
+@include media-breakpoint-up(lg) {
+  .shape-mask {
+  //first wariant
+  clip-path: polygon(0 0, 100% 0%, 90% 75%, 50% 99%, 0 75%);
+  //second wariant
+  clip-path: polygon(0 0, 100% 0%, 90% 75%, 50% 100%, 0 100%);
+  /* You can tweak the points for a more rounded or dramatic curve */
+  overflow: hidden;
+  }    
+}
 
-// .mask-skew-second{
-//     mask-image: conic-gradient(from 80deg at 100% 79%,transparent 0%,#000 0%);
-// }
 
-// .mask-skew-third{
-//     mask-image: conic-gradient(from 100deg at 10% 85%,transparent 0%,#000 0%);
-// }
 
-//show masks only from lg breakpoint
-// @include media-breakpoint-up(lg) {
-//     .mask-skew-first{
-//         mask-image: conic-gradient(from 25deg at 100% 0%,transparent 50%,#000 50%);
-//     }
-    
-//     .mask-skew-second{
-//         mask-image: conic-gradient(from 80deg at 100% 79%,transparent 50%,#000 50%);
-//     }
-
-//     .mask-skew-third {
-//         mask-image: conic-gradient(from 100deg at 10% 85%,transparent 50%,#000 50%);
-//     }
-//   }
-
-  .u-shape-mask {
-    // clip-path: polygon(0 0, 100% 0, 100% 75%, 50% 100%, 0 75%);
-    // /* You can tweak the points for a more rounded or dramatic curve */
-    // overflow: hidden;
-
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      clip-path: url(#u-curve-horizontal-flip);
-
-  }
 
 
 
