feat: process style

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -167,10 +167,11 @@ strong {
 
 //
 // PROCESS
-// ----------------------------------------------------
+// ---------------------------------------------------
 
 .process p {
     margin: 0;
+    font-size: large;
 }
 
 hr.rounded {
@@ -199,7 +200,7 @@ hr.rounded {
       
     font-size: 3rem;
 
-    box-shadow:$box-shadow-primary;
+    box-shadow:$btn-box-shadow;
 
     color: $secondary;
 }
@@ -208,28 +209,28 @@ h5 {
     font-weight: 600;
 }
 
-.process-step-first-row {
-    opacity: 0;
-    // transform: translateY(20px);
-    transition: opacity 0.5s ease, transform 0.5s ease;
-  }
+// .process-step-first-row {
+//     opacity: 0;
+//     // transform: translateY(20px);
+//     transition: opacity 0.5s ease, transform 0.5s ease;
+//   }
 
   
-.process-step-first-row.show {
-    opacity: 1;
-    // transform: translateY(0);
-}
+// .process-step-first-row.show {
+//     opacity: 1;
+//     // transform: translateY(0);
+// }
 
 
 
-.process-step-second-row {
-    opacity: 0;
-    transition: opacity 0.5s ease, transform 0.5s ease;
-  }
+// .process-step-second-row {
+//     opacity: 0;
+//     transition: opacity 0.5s ease, transform 0.5s ease;
+//   }
 
-.process-step-second-row.show {
-    opacity: 1;
-}
+// .process-step-second-row.show {
+//     opacity: 1;
+// }
 
 
 //
