--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,7 +5,8 @@
 // VARIABLES
 // ----------------------------------------------------
 $primary:#a40c24;
-$primary-transparent:#a40c236a; 
+$primary-transparent:#a40c236a;
+$primary-line:#a40c23a0;
 $secondary:#DEDEDE;
 $secondary-transparent:#dedede8e;
 $tertiary:#9c9898;
@@ -374,16 +375,19 @@ h5 {
 }
 
 .references-underline{
-  border-top: 5px solid $primary;
+  border-top: 5px solid $primary-transparent;
   border-radius: 5px;
+  opacity: 1;
 }
 
-.reference-preview-img-first {
+#references .active {
   background-color: $color-bg-primary;
   border-radius: $border-radius-primary 0 0 $border-radius-primary;
+  border-left: 5px solid $primary;
 }
 
 .reference-detail {
   background-color: $color-bg-primary;
   border-radius: 0 $border-radius-primary $border-radius-primary $border-radius-primary;
 }
+
