--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -359,9 +359,15 @@ h5 {
 //
 // REFERENCES
 // ----------------------------------------------------
+#references .nav-link {
+  // padding: 0;
+  color: $color-text;
+  // font-size: large;
+}
 #references .nav-link:hover {
   color: $primary;
 }
+
 #references img {
   border-radius: $border-radius-primary;
   transition: .4s all ease-in-out;
@@ -394,4 +400,6 @@ h5 {
   border-radius: 0 $border-radius-primary $border-radius-primary $border-radius-primary;
 }
 
-
+// #collapseReferenceSecond{
+//   display: none;
+// }
