feat: complete footer

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -425,21 +425,21 @@ color: $color-text;
 // CONTACT FORM
 // ----------------------------------------------------
 
-#contact-form {
+#footer {
   background-color: $color-bg-primary;
 }
 
-#contact-form svg {
+#footer svg {
   color: $primary;
 }
 
-#contact-form .list-group-item {
+#footer .list-group-item {
   background-color: $color-bg-primary;
   border: none;
   // align-self: center;
 }
 
-#contact-form .icon-helper {
+#footer .icon-helper {
   color: $color-bg-primary;
 }
 .partner-link {
