feat: vue-easy-lightbox style

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -99,10 +99,16 @@ strong {
   font-weight: bolder;
 }
 
+
+//Vue-easy-lightbox
+
 .toolbar-btn__resize {
   display: none !important;
 }
 
+.vel-modal {
+  background: rgb(0 0 0 / 73%) !important;
+}
 //
 // NAVBAR
 // ----------------------------------------------------
